# ml_ops_task1_zahra

./: README.md  zahra-ibishova-eda.ipynb  zahra-ibishova-fe1.ipynb  zahra-ibishova-fe2 (1).ipynb  zahra-ibishova-trainmodel.ipynb
.github/workflows/: ci.yml
ml_ops_task1_zahra/: README.md  pyproject.toml
ml_ops_task1_zahra/.github/workflows/: ci-build.yaml
ml_ops_task1_zahra/src/data/: make_dataset.py
ml_ops_task1_zahra/src/features/: build_features.py
ml_ops_task1_zahra/src/models/: predict_model.py  train_model.py
ml_ops_task1_zahra/src/visualization/: visualize.py
models/: predict_model.py  train_model.py
